--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,21 +10,191 @@
 	<header class="main-header">
 		<nav class="main-navigation">
 			<a class="main-header-logo">
-				<img src="img/nerds-logo.svg" alt="Логотип дизайн-студии «Нёрдс»">
+				<img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип дизайн-студии «Нёрдс»">
 			</a>
 			<ul class="site-navigation">
-				<li><a href="about.html">Студия</a></li>
-				<li><a href="clients.html">Клиенты</a></li>
+				<li><a href="blank.html">Студия</a></li>
+				<li><a href="blank.html">Клиенты</a></li>
 				<li><a href="catalog.html">Магазин</a></li>
-				<li><a href="contacts.html">Контакты</a></li>
+				<li><a href="blank.html">Контакты</a></li>
 			</ul>
 			<ul class="user-navigation">
-				<li><a href="cart.html">Корзина</a></li>
+				<li><a href="blank.html">Корзина</a></li>
 			</ul>
 		</nav>
 	</header>
 	<main>
-		
+		<h1 class="visually-hidden">Сайт дизайн-студии «Нёрдс»</h1>
+
+		<div class="slider">
+			<ul class="slider-list">
+				<li class="slider-list-item current-slide">
+					<div class="slide-content">
+						<p class="slide-title">Долго, дорого, скрупулезно.</p>
+						<p class="slide-description">Математически выверенный дизайн <br> для вашего сайта или мобильного приложения.</p>
+						<a class="button slide-button" href="blank.html">Узнать больше</a>
+					</div>
+				</li>
+				<li class="slider-list-item">
+					<div class="slide-content">
+						<p class="slide-title">Любим математику как никто другой</p>
+						<p class="slide-description">Никакого креатива, только математические формулы <br> для расчета идеальных пропорций.</p>
+						<a class="button slide-button" href="blank.html">Узнать больше</a>
+					</div>
+				</li>
+				<li class="slider-list-item">
+					<div class="slide-content">
+						<p class="slide-title">Только ночь, только хардкор</p>
+						<p class="slide-description">Работать днем, как все? Мы против этого. <br> Ближе к полуночи работа только начинается.</p>
+						<a class="button slide-button" href="blank.html">Узнать больше</a>
+					</div>
+				</li>
+			</ul>
+		</div>
+
+		<div class="slider-controls">
+			<button class="slider-controls-button slider-controls-button-current" aria-label="1"></button>
+			<button class="slider-controls-button" aria-label="2"></button>
+			<button class="slider-controls-button" aria-label="3"></button>
+		</div>
+
+		<section class="services">
+			<h2 class="visually-hidden">Услуги</h2>
+			<ul class="services-list">
+				<li class="service-item">
+					<h3>Веб-сайты</h3>
+					<p>Мир никогда не будет прежним <br> после того как увидит ваш сайт!</p>
+					<a class="button service-button" href="blank.html">Заказать</a>
+				</li>
+				<li class="service-item">
+					<h3>Приложения</h3>
+					<p>Покорите топ-10 приложений в AppStore и Google Play</p>
+					<a class="button service-button button-green" href="blank.html">Заказать</a>
+				</li>
+				<li class="service-item">
+					<h3>Презентации</h3>
+					<p>Вы даже не подозреваете, <br> насколько вы изумительны!</p>
+					<a class="button service-button button-yellow" href="blank.html">Заказать</a>
+				</li>
+			</ul>
+		</section>
+
+		<section class="about"> 
+			<h2 class="visually-hidden">О нас</h2>
+			<b>Мы — маленькая, но гордая дизайн-студия из Краснодара.</b>
+			<p class="about-description">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+			<p class="about-list-title">Выполняем заказы на разработку:</p>
+			<ul class="about-list">
+				<li class="about-item">Веб-сайтов любой сложности</li>
+				<li class="about-item">Мобильных приложений для iOS и Android</li>
+				<li class="about-item">Слайдшоу и видео для корпоративных презентаций</li>
+			</ul>
+		</section>
+
+		<section class="company-statistics">
+			<h2 class="visually-hidden">Статистика деятельности дизайн-студии «Нёрдс»</h2>
+			<p>
+				<img src="img/main-logo.png" width="360" height="208" alt="Логотип дизайн-студии «Нёрдс»">
+			</p>
+			<b>с 2004 года Любим точность во всем:</b>
+			<dl class="indicators-list">
+				<div class="indicator-item">
+					<dt>Уровень самоотдачи</dt>
+					<dd>146<sup>%</sup></dd>
+				</div>
+				<div class="indicator-item">
+					<dt>Соблюдение сроков</dt>
+					<dd>100<sup>%</sup></dd>
+				</div>
+				<div class="indicator-item">
+					<dt>Минимальная предоплата</dt>
+					<dd>50<sup>%</sup></dd>
+				</div>
+			</dl>
+		</section>
+
+		<section class="companies">
+			<h2 class="visually-hidden">Партнёры</h2>
+			<ul class="companies-list">
+				<li class="company-item">
+					<a class="company-link" href="https://htmlacademy.ru/intensive/htmlcss" aria-label="HTML Academy">
+						<img src="img/logo-htmlacademy.png" width="199" height="68" alt="HTML Academy">
+					</a>
+				</li>
+				<li class="company-item">
+					<a class="company-link" href="#" aria-label="Барбершоп «Бородинский»">
+						<img src="img/logo-borodinski.png" width="209" height="90" alt="HTML Academy">
+					</a>
+				</li>
+				<li class="company-item">
+					<a class="company-link" href="#" aria-label="Pink">
+						<img src="img/logo-pink.png" width="185" height="52" alt="Pink">
+					</a>
+				</li>
+				<li class="company-item">
+					<a class="company-link" href="#" aria-label="Мишка">
+						<img src="img/logo-mishka.png" width="173" height="84" alt="Мишка">
+					</a>
+				</li>
+			</ul>
+		</section>
 	</main>
+
+	<footer>
+		<section class="map">
+			<h2 class="visually-hidden">Как нас найти?</h2>
+			<img src="img/bg-map.png" width="1440" height="416" alt="191186, г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8">
+		</section>
+		<section class="contacts">
+			<p class="contacts-title">Nёrds design studio</p>
+			<p class="contacts-text">191186, Санкт-Петербург,<br>ул. Б. Конюшенная, д. 19/8</p>
+			<p class="contacts-text">тел.&nbsp;
+				<a class="contacts-link" href="tel:+78122757575">+7 (812) 275-75-75</a>
+			</p>
+
+			<a class="contacts-button button" href="feedback.html">Напишите нам</a>
+		</section>
+		<div class="content-wrapper">
+			<div class="social-links">
+				<ul class="social-list">
+					<li><a class="social-button" href="https://vk.com">Вконтакте</a></li>
+					<li><a class="social-button" href="https://www.facebook.com">Фейсбук</a></li>
+					<li><a class="social-button" href="https://www.instagram.com">Инстаграм</a></li>
+				</ul>
+			</div>
+			<div class="social-offer">
+				<b>Давайте дружить, это выгодно!</b>
+				<p>Скидка 10% для друзей из социальных сетей.</p>
+			</div>
+		</div>
+	</footer>
+
+	<section class="modal modal-form">
+		<h2>Напишите нам</h2>
+
+		<form class="form-feedback" action="https://echo.htmlacademy.ru" method="POST">
+			<div class="content-wrapper">
+				<label class="feedback-user-label">
+					Ваше имя:
+					<input class="feedback-user-input" type="text" placeholder="Имя Фамилия" required>
+				</label>
+
+				<label class="feedback-email-label">
+					Ваш e-mail:
+					<input class="feedback-email-input" type="email" name="email" placeholder="email@example.com" required>
+				</label>
+
+				<label class="feedback-text-label">
+					Текст письма:
+					<textarea class="feedback-text-input" name="feedback-text" placeholder="В свободной форме"></textarea>
+				</label>
+			</div>
+
+			<button class="button feedback-button" type="submit">Отправить</button>
+		</form>
+
+		<button class="modal-close" type="button" aria-label="Закрыть"></button>
+
+	</section>
 </body>
 </html>
