--- a/catalog.html
+++ b/catalog.html
@@ -5,6 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Дизайн-студия «Нёрдс»: Каталог шаблонов</title>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<header class="main-header">
@@ -24,13 +26,13 @@
 		</nav>
 	</header>
     <main>
-        <h1>Магазин готовых шаблонов</h1>
-
+        <h1 class="page-title">Магазин готовых шаблонов</h1>
+        
         <section class="filters">
             <h2 class="visually-hidden">Фильтр шаблонов</h2>
             <form class="filter-form" action="https://echo.htmlacademy.ru" method="GET">
                 <fieldset>
-                    <legend>Стоимость:</legend>
+                    <legend class="price-legend">Стоимость:</legend>
 
                     <div class="price-filter">
                         <div class="filter-range">
@@ -46,7 +48,7 @@
                                 <input class="price-filter-input" type="text" name="min-price" value="0">
                             </label>
                             <label class="price-filter-label">До
-                                <input class="price-filter-input" type="text" name="max-price" value="15000">
+                                <input class="price-filter-input" type="text" name="max-price" value="15 000">
                             </label>
                         </div>
                     </div>
@@ -116,7 +118,7 @@
                     </li>
                 </ul>
 
-                <ul class="sort-direction">
+                <ul class="sort-direction-list">
                     <li class="sort-direction-item">
                         <a class="sort-direction-link sort-direction-current">
                             <span class="visually-hidden">Сортировать по возрастанию</span>
@@ -135,7 +137,7 @@
                     <img src="img/img-sedona.jpg" width="360" height="576" alt="Sedona">
                     <div class="catalog-item-description">
                         <h3>
-                            <a href="blank.html">Sedona</a>
+                            <a class="catalog-item-title" href="blank.html">Sedona</a>
                         </h3>
                         <p>Информационный сайт для туристов</p>
                         <a class="button catalog-item-button" href="blank.html">9 900 руб.</a>
@@ -145,7 +147,7 @@
                     <img src="img/img-pink.jpg" width="360" height="576" alt="Pink App">
                     <div class="catalog-item-description">
                         <h3>
-                            <a href="blank.html">Pink App</a>
+                            <a class="catalog-item-title" href="blank.html">Pink App</a>
                         </h3>
                         <p>Продуктовый лендинг приложения для IOS и Android</p>
                         <a class="button catalog-item-button" href="blank.html">9 900 руб.</a>
@@ -155,7 +157,7 @@
                     <img src="img/img-barbershop.jpg" width="360" height="576" alt="Barbershop">
                     <div class="catalog-item-description">
                         <h3>
-                            <a href="blank.html">Barbershop</a>
+                            <a class="catalog-item-title" href="blank.html">Barbershop</a>
                         </h3>
                         <p>Сайт салона красоты. Для мужчин, да.</p>
                         <a class="button catalog-item-button" href="blank.html">9 900 руб.</a>
@@ -165,7 +167,7 @@
                     <img src="img/img-mishka.jpg" width="360" height="576" alt="Mishka">
                     <div class="catalog-item-description">
                         <h3>
-                            <a href="blank.html">Mishka</a>
+                            <a class="catalog-item-title" href="blank.html">Mishka</a>
                         </h3>
                         <p>Интернет-магазин вязаных игрушек</p>
                         <a class="button catalog-item-button" href="blank.html">9 900 руб.</a>
@@ -175,7 +177,7 @@
                     <img src="img/img-aplus.jpg" width="360" height="576" alt="A Plus">
                     <div class="catalog-item-description">
                         <h3>
-                            <a href="blank.html">A Plus</a>
+                            <a class="catalog-item-title" href="blank.html">A Plus</a>
                         </h3>
                         <p>Лендинг курсов повышения квалификации</p>
                         <a class="button catalog-item-button" href="blank.html">9 900 руб.</a>
@@ -185,7 +187,7 @@
                     <img src="img/img-kvast.jpg" width="360" height="576" alt="Кваст">
                     <div class="catalog-item-description">
                         <h3>
-                            <a href="blank.html">Кваст</a>
+                            <a class="catalog-item-title" href="blank.html">Кваст</a>
                         </h3>
                         <p>Промо-сайт производителя крафтового кваса</p>
                         <a class="button catalog-item-button" href="blank.html">9 900 руб.</a>
