--- a/index.html
+++ b/index.html
@@ -10,48 +10,52 @@
 </head>
 <body>
 	<header class="main-header">
-		<nav class="main-navigation">
-			<a class="main-header-logo">
-				<img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип дизайн-студии «Нёрдс»">
-			</a>
-			<ul class="site-navigation">
-				<li><a href="blank.html">Студия</a></li>
-				<li><a href="blank.html">Клиенты</a></li>
-				<li><a href="catalog.html">Магазин</a></li>
-				<li><a href="blank.html">Контакты</a></li>
-			</ul>
-			<ul class="user-navigation">
-				<li><a href="blank.html">Корзина</a></li>
-			</ul>
-		</nav>
+		<div class="content-wrapper">
+			<nav class="main-navigation">
+				<a class="main-header-logo">
+					<img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип дизайн-студии «Нёрдс»">
+				</a>
+				<ul class="site-navigation">
+					<li><a href="blank.html">Студия</a></li>
+					<li><a href="blank.html">Клиенты</a></li>
+					<li><a href="catalog.html">Магазин</a></li>
+					<li><a href="blank.html">Контакты</a></li>
+				</ul>
+				<ul class="user-navigation">
+					<li><a href="blank.html">Корзина</a></li>
+				</ul>
+			</nav>
+		</div>
 	</header>
 	<main>
 		<h1 class="visually-hidden">Сайт дизайн-студии «Нёрдс»</h1>
 
 		<div class="slider">
-			<ul class="slider-list">
-				<li class="slider-list-item current-slide">
-					<div class="slide-content">
-						<p class="slide-title">Долго, дорого, скрупулезно.</p>
-						<p class="slide-description">Математически выверенный дизайн <br> для вашего сайта или мобильного приложения.</p>
-						<a class="button slide-button" href="blank.html">Узнать больше</a>
-					</div>
-				</li>
-				<li class="slider-list-item">
-					<div class="slide-content">
-						<p class="slide-title">Любим математику как никто другой</p>
-						<p class="slide-description">Никакого креатива, только математические формулы <br> для расчета идеальных пропорций.</p>
-						<a class="button slide-button" href="blank.html">Узнать больше</a>
-					</div>
-				</li>
-				<li class="slider-list-item">
-					<div class="slide-content">
-						<p class="slide-title">Только ночь, только хардкор</p>
-						<p class="slide-description">Работать днем, как все? Мы против этого. <br> Ближе к полуночи работа только начинается.</p>
-						<a class="button slide-button" href="blank.html">Узнать больше</a>
-					</div>
-				</li>
-			</ul>
+			<div class="content-wrapper">
+				<ul class="slider-list">
+					<li class="slider-list-item current-slide">
+						<div class="slide-content">
+							<p class="slide-title">Долго, дорого, скрупулезно.</p>
+							<p class="slide-description">Математически выверенный дизайн <br> для вашего сайта или мобильного приложения.</p>
+							<a class="button slide-button" href="blank.html">Узнать больше</a>
+						</div>
+					</li>
+					<li class="slider-list-item">
+						<div class="slide-content">
+							<p class="slide-title">Любим математику как никто другой</p>
+							<p class="slide-description">Никакого креатива, только математические формулы <br> для расчета идеальных пропорций.</p>
+							<a class="button slide-button" href="blank.html">Узнать больше</a>
+						</div>
+					</li>
+					<li class="slider-list-item">
+						<div class="slide-content">
+							<p class="slide-title">Только ночь, только хардкор</p>
+							<p class="slide-description">Работать днем, как все? Мы против этого. <br> Ближе к полуночи работа только начинается.</p>
+							<a class="button slide-button" href="blank.html">Узнать больше</a>
+						</div>
+					</li>
+				</ul>
+			</div>
 		</div>
 
 		<div class="slider-controls">
@@ -60,7 +64,7 @@
 			<button class="slider-controls-button" aria-label="3"></button>
 		</div>
 
-		<section class="services">
+		<section class="services content-wrapper">
 			<h2 class="visually-hidden">Услуги</h2>
 			<ul class="services-list">
 				<li class="service-item">
@@ -81,43 +85,45 @@
 			</ul>
 		</section>
 
-		<div class="index-columns">
-			<section class="about"> 
-				<h2 class="visually-hidden">О нас</h2>
-				<b>Мы — маленькая, но гордая дизайн-студия из Краснодара.</b>
-				<p class="about-description">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
-				<p class="about-list-title">Выполняем заказы на разработку:</p>
-				<ul class="about-list">
-					<li class="about-item">Веб-сайтов любой сложности</li>
-					<li class="about-item">Мобильных приложений для iOS и Android</li>
-					<li class="about-item">Слайдшоу и видео для корпоративных презентаций</li>
-				</ul>
-			</section>
+		<div class="content-wrapper">
+			<div class="index-columns">
+				<section class="about">
+					<h2 class="visually-hidden">О нас</h2>
+					<b>Мы — маленькая, но гордая дизайн-студия из Краснодара.</b>
+					<p class="about-description">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+					<p class="about-list-title">Выполняем заказы на разработку:</p>
+					<ul class="about-list">
+						<li class="about-item">Веб-сайтов любой сложности</li>
+						<li class="about-item">Мобильных приложений для iOS и Android</li>
+						<li class="about-item">Слайдшоу и видео для корпоративных презентаций</li>
+					</ul>
+				</section>
 
-			<section class="company-statistics">
-				<h2 class="visually-hidden">Статистика деятельности дизайн-студии «Нёрдс»</h2>
-				<p>
-					<img src="img/main-logo.png" width="360" height="208" alt="Логотип дизайн-студии «Нёрдс»">
-				</p>
-				<b>с 2004 года Любим точность во всем:</b>
-				<dl class="indicators-list">
-					<div class="indicator-item">
-						<dt>Уровень самоотдачи</dt>
-						<dd>146<sup>%</sup></dd>
-					</div>
-					<div class="indicator-item">
-						<dt>Соблюдение сроков</dt>
-						<dd>100<sup>%</sup></dd>
-					</div>
-					<div class="indicator-item">
-						<dt>Минимальная предоплата</dt>
-						<dd>50<sup>%</sup></dd>
-					</div>
-				</dl>
-			</section>
+				<section class="company-statistics">
+					<h2 class="visually-hidden">Статистика деятельности дизайн-студии «Нёрдс»</h2>
+					<p>
+						<img src="img/main-logo.png" width="360" height="208" alt="Логотип дизайн-студии «Нёрдс»">
+					</p>
+					<b>с 2004 года Любим точность во всем:</b>
+					<dl class="indicators-list">
+						<div class="indicator-item">
+							<dt>Уровень самоотдачи</dt>
+							<dd>146<sup>%</sup></dd>
+						</div>
+						<div class="indicator-item">
+							<dt>Соблюдение сроков</dt>
+							<dd>100<sup>%</sup></dd>
+						</div>
+						<div class="indicator-item">
+							<dt>Минимальная предоплата</dt>
+							<dd>50<sup>%</sup></dd>
+						</div>
+					</dl>
+				</section>
+			</div>
 		</div>
 
-		<section class="companies">
+		<section class="companies content-wrapper">
 			<h2 class="visually-hidden">Партнёры</h2>
 			<ul class="companies-list">
 				<li class="company-item">
@@ -155,50 +161,53 @@
 			<p class="contacts-text">тел.&nbsp;
 				<a class="contacts-link" href="tel:+78122757575">+7 (812) 275-75-75</a>
 			</p>
-
+	
 			<a class="contacts-button button" href="feedback.html">Напишите нам</a>
 		</section>
 		<div class="content-wrapper">
-			<div class="social-links">
-				<ul class="social-list">
-					<li><a class="social-button" href="https://vk.com">Вконтакте</a></li>
-					<li><a class="social-button" href="https://www.facebook.com">Фейсбук</a></li>
-					<li><a class="social-button" href="https://www.instagram.com">Инстаграм</a></li>
-				</ul>
-			</div>
-			<div class="social-offer">
-				<b>Давайте дружить, это выгодно!</b>
-				<p>Скидка 10% для друзей из социальных сетей.</p>
+			<div class="footer-social">
+				<div class="social-links">
+					<ul class="social-list">
+						<li><a class="social-button" href="https://vk.com">Вконтакте</a></li>
+						<li><a class="social-button" href="https://www.facebook.com">Фейсбук</a></li>
+						<li><a class="social-button" href="https://www.instagram.com">Инстаграм</a></li>
+					</ul>
+				</div>
+				<div class="social-offer">
+					<b>Давайте дружить, это выгодно!</b>
+					<p>Скидка 10% для друзей из социальных сетей.</p>
+				</div>
 			</div>
 		</div>
 	</footer>
 
 	<section class="modal modal-form">
 		<h2>Напишите нам</h2>
-
+	
 		<form class="form-feedback" action="https://echo.htmlacademy.ru" method="POST">
 			<div class="content-wrapper">
 				<label>
 					Ваше имя:
 					<input type="text" placeholder="Имя Фамилия" required>
 				</label>
-
+	
 				<label>
 					Ваш e-mail:
 					<input type="email" name="email" placeholder="email@example.com" required>
 				</label>
-
+	
 				<label>
 					Текст письма:
 					<textarea name="feedback-text" placeholder="В свободной форме"></textarea>
 				</label>
 			</div>
-
+	
 			<button class="button feedback-button" type="submit">Отправить</button>
 		</form>
-
+	
 		<button class="modal-close" type="button" aria-label="Закрыть"></button>
-
+	
 	</section>
+
 </body>
 </html>
