Стилизовано модальное окно обратной связи, доработаны фильтры на страницы каталога, исправлена стилизация текущего пункта навигации

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 		<h2>Напишите нам</h2>
 	
 		<form class="form-feedback" action="https://echo.htmlacademy.ru" method="POST">
-			<div class="content-wrapper">
+			<div class="form-wrapper">
 				<label>
 					Ваше имя:
 					<input type="text" placeholder="Имя Фамилия" required>
@@ -209,7 +209,7 @@
 	
 				<label>
 					Текст письма:
-					<textarea name="feedback-text" placeholder="В свободной форме"></textarea>
+					<textarea name="feedback-text" placeholder="В свободной форме" rows="6"></textarea>
 				</label>
 			</div>
 	
